# ChangeLog for sys-fs/udev-init-scripts
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.114 2015/03/16 00:13:27 mattst88 Exp $

  16 Mar 2015; Matt Turner <mattst88@gentoo.org> udev-init-scripts-27.ebuild:
  alpha stable, bug 531602.

  28 Feb 2015; Jack Morgan <jmorgan@gentoo.org> udev-init-scripts-27.ebuild:
  sparc stable wrt bug #531602 (for real)

  28 Feb 2015; Jack Morgan <jmorgan@gentoo.org> udev-init-scripts-27.ebuild:
  sparc stable wrt bug #531602

  24 Feb 2015; Mike Frysinger <vapier@gentoo.org> udev-init-scripts-27.ebuild:
  Mark arm64/m68k/ia64/s390/sh stable.

  19 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  udev-init-scripts-27.ebuild:
  Stable on arm, bug #531602.

  19 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  udev-init-scripts-27.ebuild:
  Stable on ppc, ppc64 and x86.  Bug #531602

  17 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> udev-init-scripts-27.ebuild:
  amd64 stable wrt bug #531602

  16 Jan 2015; Jeroen Roovers <jer@gentoo.org> udev-init-scripts-27.ebuild:
  Stable for HPPA (bug #531602).

  25 Nov 2014; William Hubbs <williamh@gentoo.org>
  udev-init-scripts-9999.ebuild:
  Add message about adding udev-trigger to sysinit

  18 Aug 2014; William Hubbs <williamh@gentoo.org> udev-init-scripts-27.ebuild,
  udev-init-scripts-9999.ebuild:
  fix dependencies and sync live ebuild

*udev-init-scripts-27 (17 Aug 2014)

  17 Aug 2014; William Hubbs <williamh@gentoo.org> +udev-init-scripts-27.ebuild:
  version bump

  22 Jul 2014; Mike Frysinger <vapier@gentoo.org>
  udev-init-scripts-26-r2.ebuild:
  Mark arm64/m68k/s390/sh stable.

  14 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  -udev-init-scripts-26-r1.ebuild, -udev-init-scripts-26.ebuild:
  old

  14 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>
  udev-init-scripts-26-r2.ebuild:
  ia64 stable wrt bug #507070

  14 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>